move creation of input files to the input file handler service
this is a MASSIVE refactor of the way things were done prior as it required a lot of thought, and major changes to the unit tests due to dependency injection

the input file handler service tries to act like a factory for input files now with the input file closely resembling a model [as originally intended] with no logic in the constructor with complete removal of it too

unit tests have been modified according, however, they need a HUGE overhaul, making sure to move tests into their new classes and resolve some duplication in the constructors of the tests that got introduced with this change

--- a/src/SimpleAVSGeneratorCore/SimpleAVSGeneratorCore.csproj
+++ b/src/SimpleAVSGeneratorCore/SimpleAVSGeneratorCore.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Lsj.MediaInfo.Wrapper.Core" Version="22.12.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
