--- a/cmake/SimpleAVSGenerator.WinForms.AssemblyInfo.cs.in
+++ b/cmake/SimpleAVSGenerator.WinForms.AssemblyInfo.cs.in
@@ -4,9 +4,9 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("Simple AVS Generator")]
+[assembly: AssemblyTitle("Simple AVS Generator: WinForms")]
 [assembly: AssemblyCompany("Shaylen Reddy")]
-[assembly: AssemblyProduct("Simple AVS Generator")]
+[assembly: AssemblyProduct("Simple AVS Generator: WinForms")]
 [assembly: AssemblyCopyright("Shaylen Reddy: MIT License")]
 
 // Setting ComVisible to false makes the types in this assembly not visible 
