begin prep for multiple frontends
the winforms frontend is now published to a winforms subdirectory within a publish directory at the root of the repo

the installer template has been modified to not only look in that directory for the files to create the installer, but also makes it clear in the installation process that the winforms version is going to be installed and is installed in a winforms subdirectory of the original installation path

this is a breaking change requiring the previous version to be uninstalled

also, in the "Installed Apps" section of settings > apps, it displays "Simple AVS Generator: WinForms"

there's also a fix in the build script regarding the test directory not being found and deleted, this is something i overlooked when restructuring the codebase

with all this done, this is only partially completed, adjusting cmake would be the next move to make the installer template more reuseable

this can only be done once the wpf frontend is in

--- a/cmake/installer.iss.in
+++ b/cmake/installer.iss.in
@@ -1,4 +1,4 @@
-#define MyAppName "Simple AVS Generator"
+#define MyAppName "Simple AVS Generator: WinForms"
 #define MyAppVersion "@FILE_VERSION@"
 #define MyAppInformationalVersion "@INFORMATIONAL_VERSION@"
 #define MyAppPublisher "Shaylen Reddy"
@@ -12,13 +12,13 @@ AppVerName={#MyAppName} v{#MyAppInformationalVersion}
 AppPublisher={#MyAppPublisher}
 UninstallDisplayName={#MyAppName}
 
-DefaultDirName={commonpf64}\{#MyAppName}
+DefaultDirName={commonpf64}\{#MyAppName}\WinForms
 DisableDirPage=yes
 DisableProgramGroupPage=yes
 LicenseFile=..\COPYING
 
 OutputDir=..\installer
-OutputBaseFilename=SimpleAVSGeneratorSetup-v{#MyAppInformationalVersion}-Win64
+OutputBaseFilename=SimpleAVSGeneratorSetup-v{#MyAppInformationalVersion}-WinForms-Win64
 Compression=lzma
 SolidCompression=yes
 WizardStyle=modern
@@ -40,8 +40,8 @@ Name: "english"; MessagesFile: "compiler:Default.isl"
 Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{cm:AdditionalIcons}"; Flags: unchecked
 
 [Files]
-Source: "..\publish\{#MyAppExeName}"; DestDir: "{app}"; Flags: ignoreversion
-Source: "..\publish\*"; DestDir: "{app}"; Flags: ignoreversion
+Source: "..\publish\winforms\{#MyAppExeName}"; DestDir: "{app}"; Flags: ignoreversion
+Source: "..\publish\winforms\*"; DestDir: "{app}"; Flags: ignoreversion
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [Icons]
