--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,7 +89,7 @@ steps:
     coverageType: 'lines'
     coverageThreshold: '90'
 
-- script: dotnet publish -c Release -r win-x64 --self-contained -o "..\..\..\publish"
+- script: dotnet publish -c Release -r win-x64 --self-contained -o "..\..\..\publish\winforms"
   displayName: 'Publish the Final Executable'
   workingDirectory: '$(workDir)\Frontends\SimpleAVSGenerator.WinForms'
 
