--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,14 @@ steps:
     command: restore
     arguments: -c $(buildConfiguration)
     projects: '$(Build.SourcesDirectory)/src/SimpleAVSGenerator.sln'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Restore dotnet tools'
+  inputs:
+    command: custom
+    custom: tool
+    arguments: restore
+    workingDirectory: $(Build.SourcesDirectory)
     
 - task: SonarCloudPrepare@1
   displayName: 'Prepare SonarCloud for Analysis'
@@ -44,6 +52,8 @@ steps:
     scannerMode: 'MSBuild'
     projectKey: 'ShaylenReddy42_Simple-AVS-Generator'
     projectName: 'Simple-AVS-Generator'
+    extraProperties: |
+      sonar.cs.vscoveragexml.reportsPaths=$(Build.SourcesDirectory)/CodeCoverage/SonarQube.xml
 
 - task: DotNetCoreCLI@2
   displayName: 'Build Solution'
@@ -59,6 +69,13 @@ steps:
    custom: test
    arguments: -c $(buildConfiguration) --results-directory "$(testResultsDir)" --collect:"XPlat Code Coverage" --logger trx
    workingDirectory: $(workDir)
+
+- task: DotNetCoreCLI@2
+  displayName: 'Generate Code Coverage Report for SonarCloud'
+  inputs:
+    command: custom
+    custom: tool
+    arguments: run reportgenerator -reports:"$(testResultsDir)\*\coverage.cobertura.xml" -reporttypes:SonarQube -targetDir:"$(Build.SourcesDirectory)\CodeCoverage"
 
 - task: PublishTestResults@2
   displayName: 'Publish Test Results'
