hmm, thought there would be an issue
checked the issue raised in the pipeline and found out that i could also reference the visual studio test results [.trx] file with a different property

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,7 @@ steps:
     projectKey: 'ShaylenReddy42_Simple-AVS-Generator'
     projectName: 'Simple-AVS-Generator'
     extraProperties: |
+      sonar.cs.vstest.reportsPaths=$(testResultsDir)/*.trx
       sonar.cs.vscoveragexml.reportsPaths=$(Build.SourcesDirectory)/CodeCoverage/SonarQube.xml
 
 - task: DotNetCoreCLI@2
