--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,7 @@ steps:
     projectName: 'Simple-AVS-Generator'
     extraProperties: |
       sonar.cs.vstest.reportsPaths=$(testResultsDir)/*.trx
+      sonar.cs.opencover.reportsPaths=$(testResultsDir)/*/coverage.cobertura.xml'
 
 - task: DotNetCoreCLI@2
   displayName: 'Build Solution'
